<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout_enterNames"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".EnterNamesActivity">

    <TextView
        android:id="@+id/textView_usernameDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="250dp"
        android:paddingStart="50dp"
        android:text="@string/usernameDescription"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/textView_playerUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterName"
        android:textAlignment="textStart"
        android:textColor="@color/lavender"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText_enterUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/lavender"
        android:hint="@string/usernameHint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:letterSpacing="0.1"
        android:maxEms="15"
        android:minEms="3"
        android:textAlignment="center"
        android:textColor="@color/lavender"
        android:textColorHint="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border"

        android:letterSpacing="0.05"
        android:soundEffectsEnabled="true"
        android:text="@string/saveButton"
        android:textColor="@color/lavender"
        android:textSize="40sp"
        android:textStyle="bold|italic" />

</LinearLayout>