<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout_leaderBoard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_leaderboardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/leaderboardTitle"
            android:textAlignment="center"
            android:textColor="@color/lavender"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_clickStats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/leaderboardAdvancedStats"
            android:textAlignment="center"
            android:textColor="@color/lavender"
            android:textSize="14sp"
            android:textStyle="italic"
            app:autoSizeTextType="none"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <ListView
        android:id="@+id/listview_LEADERBOARD"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="18dp"
        android:layout_weight="3"
        android:background="@drawable/border"
        android:clickable="false"
        android:divider="@color/darkPink"
        android:dividerHeight="3dp"
        android:isScrollContainer="true"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        android:textAlignment="viewStart">

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|top">

        <Button
            android:id="@+id/button_resetLeaderboard"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="8"
            android:background="@drawable/border"
            android:backgroundTint="@color/hotPink"
            android:paddingBottom="5dp"
            android:soundEffectsEnabled="true"
            android:text="@string/reset"
            android:textColor="@color/lavender"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_home"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="2"
            android:background="@drawable/border"
            android:backgroundTint="@color/hotPink"
            android:paddingBottom="5dp"
            android:soundEffectsEnabled="true"
            android:text="@string/home"
            android:textColor="@color/lavender"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>